--- a/src/app/owner-registration/owner-registration.component.html
+++ b/src/app/owner-registration/owner-registration.component.html
@@ -31,11 +31,11 @@
                   <span style="color: red;">*</span><input type="password" name="password" class="form-control form-control-lg" id="password" placeholder="Enter password" required >
                 </div>
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <span style="color: red;">*</span><input type="file" name="image" class="form-control form-control-lg" id="image" placeholder="select image" required >
-                </div>
+                </div> -->
 
-                <!-- <input type="checkbox" onclick="showPassword()">Show Password <br><br> -->
+                <input type="checkbox" onclick="showPassword()">Show Password <br><br>
 
 
                 <div class="mt-3">
